# ompt-dump

./: .gitignore  CMakeLists.txt  README.md
generator/: main.py
src/: callback-impl.h  callback-register.h  tool.c
tests/: CMakeLists.txt
tests/src/: omp.c
